src/test/ui/consts/dangling-alloc-id-ice.stderr
error: encountered dangling pointer in final constant
  --> $DIR/dangling-alloc-id-ice.rs:9:1
   |
LL | / const FOO: &() = {
LL | |
LL | |     let y = ();
LL | |     unsafe { Foo { y: &y }.long_live_the_unit }
LL | | };
   | |__^

error: aborting due to previous error

